kustomize-smokeping/smokeping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  labels:
    app: smokeping
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: smokeping
