kustomize-smokeping/smokeping-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: smokeping-ingress
  namespace: smokeping
  labels:
    app: smokeping
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
      - "smokeping.abrmanlabs.com"
      secretName: "smokeping-tls-staging"
  rules:
    - host: "smokeping.abrmanlabs.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: smokeping
              servicePort: 80
